--- a/templates/website/home.html
+++ b/templates/website/home.html
@@ -7,7 +7,7 @@
     <div class="hero-content">
         <h1>GRACE SPA</h1>
         <p>歴18年のプロフェッショナルセラピストによる<br>本格オイルマッサージで究極の癒しを</p>
-        <a href="{% url 'bookings:booking_create' %}" class="cta-button">今すぐ予約する</a>
+        <a href="{% url 'bookings:booking_step1' %}" class="cta-button">今すぐ予約する</a>
     </div>
 </section>
 
